--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "jsx": "react",
+    "allowSyntheticDefaultImports": true,
     "moduleResolution": "node"
   }
 }
