--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.8.5",
     "autoprefixer": "^9.6.1",
     "css-loader": "^3.1.0",
+    "hex-rgb": "^4.1.0",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "^3.0.0",
