--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,14 @@
 {
   "compilerOptions": {
+    "lib": ["dom", "es2016", "es2017.object"],
+    "rootDir": "src",
+    "outDir": "dist",
     "target": "es6",
     "jsx": "react",
     "allowSyntheticDefaultImports": true,
+    "module": "commonjs",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "moduleResolution": "node"
   }
 }
