--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss-loader": "^3.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-dropzone": "^10.1.7",
     "style-loader": "^1.0.0",
     "tailwindcss": "^1.1.2",
     "ts-loader": "^6.0.4",
