--- a/package.json
+++ b/package.json
@@ -6,44 +6,45 @@
   "typings": "./src/@types",
   "scripts": {
     "test": "jest",
-    "testw": "jest --watchAll",
+    "test:watch": "jest --watchAll",
     "coverage": "jest --coverage",
     "dev": "webpack --mode=development --watch",
-    "buildDev": "webpack --mode=development",
+    "build:dev": "webpack --mode=development",
     "build": "webpack --mode=production"
   },
   "author": "impulse",
   "license": "MIT",
   "dependencies": {
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
-    "autoprefixer": "^9.7.4",
-    "css-loader": "^3.4.2",
+    "autoprefixer": "^9.8.4",
+    "css-loader": "^3.6.0",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "mobx": "^5.15.4",
-    "mobx-react-lite": "^2.0.0",
-    "mobx-state-tree": "^3.15.0",
+    "mobx-react-lite": "^2.0.7",
+    "mobx-state-tree": "^3.16.0",
     "parse-color": "^1.0.0",
     "postcss-loader": "^3.0.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-dropzone": "^11.0.0",
-    "style-loader": "^1.1.3",
-    "tailwindcss": "^1.1.4",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.5",
-    "url-loader": "^4.0.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
+    "style-loader": "^1.2.1",
+    "tailwindcss": "^1.4.6",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.6",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "2.1.2",
     "@tailwindcss/custom-forms": "0.2.1",
-    "@types/jest": "25.1.4",
-    "@types/node": "13.13.6",
-    "jest": "25.3.0",
-    "ts-jest": "25.3.0",
+    "@types/jest": "26.0.3",
+    "@types/node": "14.0.14",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "cssnano": "^4.1.10",
+    "jest": "26.1.0",
+    "ts-jest": "26.1.1",
     "webpack-dev-server": "3.11.0"
   }
 }
