--- a/package.json
+++ b/package.json
@@ -15,20 +15,22 @@
   "author": "impulse",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^9.8.4",
+    "autoprefixer": "^10.2.1",
+    "classnames": "^2.2.6",
     "css-loader": "^3.6.0",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.20",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.7",
     "mobx-state-tree": "^3.16.0",
     "parse-color": "^1.0.0",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "^4.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
     "style-loader": "^1.2.1",
-    "tailwindcss": "^1.4.6",
+    "tailwindcss": "^2.0.2",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.6",
     "url-loader": "^4.1.0",
@@ -36,14 +38,15 @@
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "2.1.2",
-    "@tailwindcss/custom-forms": "0.2.1",
+    "@fullhuman/postcss-purgecss": "3.1.3",
+    "@tailwindcss/forms": "^0.2.1",
     "@types/jest": "26.0.3",
     "@types/node": "14.0.14",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
     "cssnano": "^4.1.10",
     "jest": "26.1.0",
+    "postcss": "^8.2.3",
     "ts-jest": "26.1.1",
     "webpack-dev-server": "3.11.0"
   }
