--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
   "dependencies": {
     "autoprefixer": "^10.3.4",
     "classnames": "^2.3.1",
-    "css-loader": "^3.6.0",
+    "css-loader": "^6.2.0",
     "html-webpack-inline-source-plugin": "0.0.10",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "lodash": "^4.17.21",
     "mobx": "^6.3.3",
     "mobx-react-lite": "^3.2.1",
     "mobx-state-tree": "^5.0.2",
     "parse-color": "^1.0.0",
-    "postcss-loader": "^4.1.0",
+    "postcss-loader": "^6.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.0",
-    "style-loader": "^1.2.1",
+    "style-loader": "^3.2.1",
     "tailwindcss": "^2.2.15",
-    "ts-loader": "^7.0.5",
-    "typescript": "^3.9.6",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.4.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "4.0.3",
@@ -47,7 +47,8 @@
     "cssnano": "^5.0.8",
     "jest": "27.2.0",
     "postcss": "^8.3.6",
+    "react-dev-utils": "^11.0.4",
     "ts-jest": "27.0.5",
-    "webpack-dev-server": "3.11.0"
+    "webpack-dev-server": "4.2.1"
   }
 }
