--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,6 @@
   "id": "738806869514947558",
   "api": "1.0.0",
   "main": "dist/code.js",
-  "ui": "dist/ui.html"
+  "ui": "dist/ui.html",
+  "editorType": ["figma"]
 }
